<resources>


    <string name="app_name">Play Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apps">Apps</string>
    <string name="games">Games</string>
    <string name="categories_arrow">Categories ↓</string>
    <string name="learn_more">Learn More</string>
    <string name="browse_by_age">Browse by age</string>
    <string name="ages_up_to_5">Ages up to 5</string>
    <string name="ages_6_8">Ages 6-8</string>
    <string name="ages_9_12">Ages 9-12</string>
    <string name="apps_for_kinds">Apps for Kinds</string>
    <string name="fragment_kinds">fragment_kinds</string>
    <string name="everything_here_is_teacher_approved">Everything here is Teacher Approved</string>
    <string name="top_paid">Top paid</string>
    <string name="top_grossing">Top grossing</string>
    <string name="top_free">Top Free</string>
    <string name="top_charts">Top Charts</string>


</resources>