<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black">


    <ScrollView
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <ImageView
                android:id="@+id/img_kinds"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center"
                android:text="@string/everything_here_is_teacher_approved"
                android:textColor="@color/white"
                android:textSize="@dimen/_30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_kinds" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_learn_more"
                android:layout_width="@dimen/_100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:background="@drawable/shape_rounded_green"
                android:text="@string/learn_more"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_title" />


            <TextView
                android:id="@+id/title_browse_by_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_30dp"
                android:text="@string/browse_by_age"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_learn_more" />


            <LinearLayout
                android:id="@+id/checkbox_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="@id/title_browse_by_age"
                app:layout_constraintTop_toBottomOf="@id/title_browse_by_age">


                <CheckBox
                    android:id="@+id/checkBox"
                    style="@style/style_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ages_up_to_5" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    style="@style/style_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ages_6_8" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    style="@style/style_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ages_9_12" />
            </LinearLayout>

            <TextView
                android:id="@+id/title_apps_for_kinds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:text="@string/apps_for_kinds"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/title_browse_by_age"
                app:layout_constraintTop_toBottomOf="@id/checkbox_" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_kinds"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_apps_for_kinds" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
